force-app/main/default/objects/Referee__c/Referee__c.object-meta.xml
<CustomObject>
    <label>Referee</label>
    <nameField>
        <displayFormat>REF - {00000}</displayFormat>
        <label>Referee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>