force-app/main/default/objects/Referee__c/fields/Certified_Referee__c.field-meta.xml
<CustomField>
    <fullName>Certified_Referee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Referee</label>
    <type>Checkbox</type>
</CustomField>