force-app/main/default/objects/Referee__c/fields/Date_of_Last_Match_Officiated__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Match_Officiated__c</fullName>
    <label>Date of Last Match Officiated</label>
    <type>Date</type>
</CustomField>