force-app/main/default/objects/Referee__c/fields/PIcture2__c.field-meta.xml
<CustomField>
    <fullName>PIcture2__c</fullName>
    <formula>IMAGE(Picture_Path__c, &quot;Profile Picture&quot;, 130, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIcture2</label>
    <type>Text</type>
</CustomField>