force-app/main/default/objects/Referee__c/fields/Picture_Path__c.field-meta.xml
<CustomField>
    <fullName>Picture_Path__c</fullName>
    <description>path for pic</description>
    <label>Picture Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>