force-app/main/default/objects/Referee__c/listViews/Referee.listView-meta.xml
<ListView>
    <fullName>Referee</fullName>
    <columns>NAME</columns>
    <columns>Bio__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <label>Referee</label>
</ListView>